fix: sticky flexible header z-index and sticky order (#990)

--- a/assets/source/3.0/sass/navigation/_header-flexible.scss
+++ b/assets/source/3.0/sass/navigation/_header-flexible.scss
@@ -1,4 +1,13 @@
 .c-header.c-header--flexible {
+
+    &#site-header-flexible-upper {
+        z-index: $level-8;
+    }
+
+    &#site-header-flexible-lower {
+        z-index: $level-6;
+    }
+
     .grid-container {
         display: grid;
         grid-template-rows: 1fr 1fr;
